changed wording in portfolio section and added resume pdf

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Resume <a target="blank" href=""><span class="glyphicon glyphicon-file"></a></span></h2>
+                    <h2>Resume <a target="blank" href="WITT_cv.pdf"><span class="glyphicon glyphicon-file"></a></span></h2>
                     <hr>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-md-5">
                     <h4>L'Etoile Parent Website<span class="glyphicon glyphicon-star"></span><a target="blank" href="http://etoileschool.com/index.html">etoileschool.com</a></h4>
-                    <li>This is another website I made using Bootstrap. I created this site to keep families abreast of class and school events, provide easy access to staff contact information, and to provide each class with an outlet to share projects and news.</li>
+                    <li>This is another website I made using Bootstrap. I created this site to keep families up to date on class and school events, provide easy access to staff contact information, and to provide each class with an outlet to share projects and news.</li>
                     <li>Features include individualized embedded calendars for each class, customized picture carousels for class pages, and contact sidebars.</li>
                     <li>Results: Families attend more school events thereby increasing our sense of community and helping to reduce family turnover during re-enrollment, improved staff productivity since families ask less questions about the calendar and contact information.</li>
                 </div>
