added more student sites

--- a/kids.html
+++ b/kids.html
@@ -9,17 +9,18 @@
 		a {color: #1FE8E0;}
 		ul {float: left; margin-left: 10%;}
 		img {float: right; margin-right: 10%;}
-		html {background-color: grey;}
+		html {background-color: grey; padding: 3%;}
 	</style>
 </head>
 
 <body>
 	<h1>Website Project</h1>
-	<h3>This week children used Sublime Text Editor to work with raw HTML and CSS code to make their own website! They picked the topic, text, images, and styling for their website.</h3>
+	<h3>This week students used Sublime Text Editor to work with raw HTML and CSS code to make their own websites! They picked the topic, text, images, and styling for their website.</h3>
 	<h4>Click on the links below to see the finished products.</h4>
 	<ul>
 		<li><a href="kids/adelaide.html" target="_blank">Adelaide's Site</a></li>
 		<li><a href="kids/alton.html" target="_blank">Alton's Site</a></li>
+		<li><a href="kids/eva.html" target="_blank">Eva's Site</a></li>
 		<li><a href="kids/kevin.html" target="_blank">Kevin's Site</a></li>
 		<li><a href="kids/kieran.html" target="_blank">Kieran's Site</a></li>
 		<li><a href="kids/lola.html" target="_blank">Lola's Site</a></li>
@@ -27,7 +28,11 @@
 		<li><a href="kids/maeve.html" target="_blank">Maeve's Site</a></li>
 		<li><a href="kids/olivia.html" target="_blank">Olivia's Site</a></li>
 		<li><a href="kids/quiyn.html" target="_blank">Quiyn's Site</a></li>
+		<li><a href="kids/minei-mg.html" target="_blank">Roman's Site</a></li>
 		<li><a href="kids/salma.html" target="_blank">Salma's Site</a></li>
+		<li><a href="kids/saphina.html" target="_blank">Saphina's Site</a></li>
+		<li><a href="kids/sunny.html" target="_blank">Sunny's Site</a></li>
+		<li><a href="kids/yana.html" target="_blank">Yana's Site</a></li>
 	</ul>
 <img src="kids/saphina.jpg">
 </body>
